--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,10 +3,14 @@ spring.datasource.username=
 spring.datasource.password=
 flyway.baseline-on-migrate=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-server.port=8081
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.clean-disabled=false
+spring.config.import=optional:file:.env[.properties]
+server.port=8081
 
+# ----------------------------
+# Auth0 (OAuth2 Login via Spring Security)
+# ----------------------------
 spring.security.oauth2.client.registration.auth0.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.auth0.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
