--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Security test helpers (oauth2Login, @WithMockUser, etc.) -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
