more fixes for routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 logging.level.org.apache.http=DEBUG
+server.forward-headers-strategy=native
